--- a/views/layouts/principal.hbs
+++ b/views/layouts/principal.hbs
@@ -1,16 +1,14 @@
 <html>
-
 {{> head}}
-
 <body>
-
     <div class="container">
         {{> header}}
         <main>
           
           <div class="card-body" data-mdb-perfect-scrollbar="true" style=" height: 400px; overflow-y:scroll;" id="mensajes-chat"></div>
 
-            <form onsubmit= "return enviarMensaje(event)">
+            <form onsubmit="return enviarMensaje(this)">
+                
                 <div class="chat-message clearfix">
                     <div class="input-group mb-0">
                         <div class="input-group-append">
@@ -21,15 +19,13 @@
                     </div>
                 </div>
             </form>
-            </div>
-
+            
         </main>
-
     </div>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="../index.js"></script>
-</body>
 
+<script src="/socket.io/socket.io.js"></script>
+  <script src="../layouts/index.js"></script>    
+</body>
 
 
 </html>
