--- a/views/layouts/principal.hbs
+++ b/views/layouts/principal.hbs
@@ -2,18 +2,53 @@
 {{> head}}
 <body>
     <div class="container">
-        {{> header}}
         <main>
-          
-          <div class="card-body" data-mdb-perfect-scrollbar="true" style=" height: 400px; overflow-y:scroll;" id="mensajes-chat"></div>
+            
+            <form class="form-signin" onsubmit="return enviarProducto(this)">
+
+                <h1 class="h3 mb-3 font-weight-normal">Ingrese el producto</h1>
+
+                <label for="title" class="sr-only">Nombre</label>
+                <input type="text" id="title" class="form-control" placeholder="title" required autofocus name="title"/>
+
+                <label for="precio" class="sr-only">Precio</label>
+                <input type="number" id="precio" class="form-control" placeholder="precio" required name="precio"/>
+            
+                <label for="thumbnail" class="sr-only">Imagen</label>
+                <input type="thumbnail" id="thumbnail" class="form-control" placeholder="url image" required name="thumbnail"/>
+            
+                <button class="btn btn-lg btn-primary btn-block" type="submit">enviar producto a la lista</button>
+            </form>
+
+            <div class="bg-dark mx-6 py-6">
+                {{#if compras}}
+                <table class="table table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">#id</th>
+                            <th scope="col">Producto</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Foto</th>
+                        </tr>
+                    </thead>
+                    <tbody id="lista-productos"></tbody>
+                </table>
+                {{else}}
+                <h1 class="text-center" style="color: white; border-style: solid">No encontrado</h1>
+                {{/if}}
+            </div>
+
+
+    
+            <div class="card-body" data-mdb-perfect-scrollbar="true" style=" height: 400px; overflow-y:scroll;" id="mensajes-chat"></div>
+
 
             <form onsubmit="return enviarMensaje(this)">
-                
                 <div class="chat-message clearfix">
                     <div class="input-group mb-0">
                         <div class="input-group-append">
-                            <input id="email" type="email" class="form-control" placeholder="email" />
-                            <input id="chat_mensaje" type="text" class="form-control" placeholder="Mensaje..." />
+                                <input id="email" type="email" class="form-control" required placeholder="email" />
+                                <input id="chat_mensaje" type="text" class="form-control" placeholder="Mensaje..." />
                         </div>
                         <input id="enviar_msj" type="submit" class="form-control" placeholder="Enviar mensaje" />
                     </div>
