problemas con mensajes

--- a/views/layouts/principal.hbs
+++ b/views/layouts/principal.hbs
@@ -58,7 +58,10 @@
     </div>
 
 <script src="/socket.io/socket.io.js"></script>
-  <script src="../layouts/index.js"></script>    
+<script src="../partials/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
+
+    
 </body>
 
 
